--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-routes-versioning": "^1.0.1",
+    "jose": "^5.2.0",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
