--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "nodemon --quiet app.js"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.17",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
@@ -22,9 +23,12 @@
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
+    "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "reflect-metadata": "^0.2.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
