--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.17",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-routes-versioning": "^1.0.1",
+    "joi": "^17.12.1",
     "jose": "^5.2.0",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
@@ -27,9 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "reflect-metadata": "^0.2.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
