--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.12.1",
     "jose": "^5.2.0",
     "mongodb": "^6.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
